[package]
name = "slots-slice"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
description = "Provides utilities for manipulating slices of optional values."
readme = "README.md"
repository = "https://github.com/Mainzu/slots-slice"
categories = ["rust-patterns"]
keywords = ["slots", "optional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
